--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-sonner": "^2.0.9",
-    "vue-virtual-scroller": "^1.1.2"
+    "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
